# starfield-config

./: Mod-list.txt  README.md  StarfieldCustom.ini  plugins.txt
Data/: Easy Digipick.esm  KeepYourTrash.esm  NoXPKillSteal.esm  disablegravjumpflash.esm
Data/Interface/: StarUI HUD (default).ini  StarUI HUD Icons.swf  StarUI Inventory (default).ini  StarUI Inventory - FormIDs.txt  StarUI Inventory Icons.swf  StarUI Outpost (default).ini  StarUI Ship Builder (default).ini  StarUI Ship Builder Loading Spinner.swf  StarUI Workbench (default).ini  StarUI Workbench Icons.swf  alertmessage.swf  alertmessage_lrg.swf  almanacmenu.swf  almanacmenu_lrg.swf  armorcraftingmenu.swf  armorcraftingmenu_lrg.swf  bartermenu.swf  bartermenu_lrg.swf  beep_chatter_templates.default  beep_hudwidget_config.default  bethesdanetlogin.swf  bookmenu.swf  bookmenu_lrg.swf  boundarymenu.swf  boundarymenu_lrg.swf  buttonclips.gfx  buttonclips.swf  buttonclips_lrg.gfx  buttonclips_lrg.swf  chargenmenu.swf  chargenmenu_lrg.swf  console.swf  containermenu.swf  containermenu_lrg.swf  creationslibrarypanel.swf  creationslibrarypanel_lrg.swf  creditsmenu.swf  creditsmenu_lrg.swf  crossplatformbuttons.swf  cursormenu.swf  (+234 more)
Data/SFSE/: sfse.ini
Data/Strings/: xatmosNoClutter_pl.strings
Data/Video/: BGS_LOGO_1080p_BinkVersion.bk2
Data/strings/: xatmosNoClutter_es.ilstrings
sfse-digipick-plugin/: CMakeLists.txt  README.md
sfse-digipick-plugin/config/: EasyDigipickSFSE.ini
sfse-digipick-plugin/src/: main.cpp
tools/: deploy_easy_digipick_sfse.sh  rebuild_easy_digipick.py
(+41 files in other folders)
